<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Neo Saturn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Revolutionizing the banking experience like never done before</string>
    <string name="pin_text">Please create your Neo Saturn unique pin, this will be required each time you login into your app</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="please_set_up_your_touch_id">Please set up your TouchID</string>
    <string name="add_your_fingerprint">To add your fingerprint, lift and rest your\nfinger at home button repeatedly</string>
    <string name="skip_this_step">Skip this Step</string>
    <string name="create_pin">Create Pin</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="enter_confirm_pin">Enter Confirm Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="authentication_successful">Authentication successful.</string>
    <string name="authentication_fail">Authentication failed.Try Again.</string>
    <string name="confirm_pin_not_match">Confirm Pin Not Match</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="your_data_is_secure_with_us">Your data is secure with us</string>
    <string name="bank_grade_security">Bank Grade Security</string>
    <string name="bank_grade_security_des">256-bit +SSL secured + XSS prevention</string>
    <string name="data_privacy">Data Privacy</string>
    <string name="data_privacy_des">Data is only shared with ISO 2001 certified 3rd parties only for credit assessment</string>
    <string name="data_storage">Data Storage</string>
    <string name="data_storage_des">We don\'t store any passwords or OTP you share with us</string>
    <string name="lending_policy">Lending Policy</string>
    <string name="lending_policy_des">Our policies and services are fully regulated and legally compliant</string>
    <string name="proceed_further">Proceed further</string>
    <string name="allow_permissions_to_proceed_further">Allow permissions to proceed further</string>
    <string name="permit">Permit</string>
    <string name="location">Location</string>
    <string name="location_des">We access location permissions to register your location </string>
    <string name="sms">SMS</string>
    <string name="sms_des">We take SMS permission to read OTPs and financial messages</string>
    <string name="contact">Contact</string>
    <string name="contact_des">We take permission for fraud prevention, identity verification, and easy reference contact addition.</string>
    <string name="camera">Camera</string>
    <string name="camera_des">We take camera permissions for encrypted pictures of you and your KYC documents.</string>
    <string name="video">Video</string>
    <string name="video_des">We take audio and camera permissions to capture 360-degree video for valid user authentication</string>
    <string name="credit_score">Credit Score</string>
    <string name="credit_score_des">We request your permission to fetch your credit score from a third-party credit bureau for loan eligibility</string>
    <string name="apps_installed">Apps Installed</string>
    <string name="apps_installed_des">We read the apps installed on your device to ensure loan eligibility and prevent fraud</string>
    <string name="allow">Allow</string>
    <string name="processing">Processing</string>
    <string-array name="docs">
        <item>PAN Card</item>

    </string-array>
    <string-array name="loanInterestOption">
        <item>a% for 4 weeks, b% for 4 weeks, and c% for 5 weeks</item>
        <item>x% for 4 weeks, y% for 4 weeks, and z% for 5 weeks</item>
    </string-array>
    <string-array name="loanOptions">
        <item>3000</item>
        <item>6000</item>
    </string-array>
    <string name="last_updated_date_time">Last updated on January 21, 2023</string>
    <string name="accept">Accept</string>
    <string name="pp_tc_accept">Accept</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="introduction">Introduction</string>
    <string name="introduction_desc">This Privacy Policy governs the collection, use, and disclosure of personal information collected by Neo Saturn loan disbursement app. By using our app, you consent to the terms of this Privacy Policy.</string>
    <string name="collection_of_personal_information">Collection of Personal Information</string>
    <string name="collection_of_personal_information_desc">We collect personal information from our users to verify identity, prevent fraud, and assess loan eligibility. This information may include, but is not limited to, your name, date of birth, address, phone number, email address, financial information, and credit score.\n\nWe collect this information directly from you, or from third-party sources such as credit bureaus and public records. We only collect personal information that is necessary for the purposes for which it is being collected.</string>
    <string name="use_and_sharing_of_personal_information">Use and Sharing of Personal Information</string>
    <string name="use_and_sharing_of_personal_information_desc">We use personal information collected from our users to process loan applications, verify identity and eligibility, and prevent fraud. We may share this information with our affiliates, service providers, and other third parties as necessary to provide our services.\n\nWe do not sell or rent your personal information to third parties for marketing purposes.</string>
    <string name="data_security">Data Security</string>
    <string name="data_security_desc">We take reasonable steps to protect the personal information we collect from unauthorized access, use, and disclosure. We use industry-standard encryption and security measures to safeguard your personal information.\n\nHowever, no security system is completely foolproof, and we cannot guarantee the security of your personal information.</string>
    <string name="your_rights">Your Rights</string>
    <string name="your_rights_desc">You have the right to access, correct, and delete your personal information that we hold. You may also have the right to restrict or object to our use of your personal information.\n\nIf you have any questions or concerns about our Privacy Policy or the collection, use, or sharing of your personal information, please contact us at privacy@neosaturn.in</string>
    <string name="changes_to_our_privacy_policy">Changes to our Privacy Policy</string>
    <string name="changes_to_our_privacy_policy_desc">We may update our Privacy Policy from time to time. We will provide notice of any material changes to our Privacy Policy by posting the updated Privacy Policy on our app.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">If you have any questions or concerns about our Privacy Policy or the collection, use, or sharing of your personal information, please contact us at privacy@neosaturn.in</string>
    <string name="terms_and_Conditions">Terms and Conditions</string>
    <string name="tc_introduction_desc">Welcome to Neo Saturn loan disbursement app. These Terms and Conditions govern your use of our app. By using our app, you agree to these Terms and Conditions. If you do not agree to these Terms and Conditions, you may not use our app.</string>
    <string name="use_of_the_app">Use of the App</string>
    <string name="use_of_the_app_desc">You may use our app to apply for loans, check your loan status, and manage your loan account. You may not use our app for any illegal or unauthorized purpose.\n\nYou must provide accurate and complete information when applying for a loan. You are responsible for maintaining the confidentiality of your login credentials and for all activities that occur under your account.</string>
    <string name="intellectual_property">Intellectual Property</string>
    <string name="intellectual_property_desc">All content and materials on our app, including but not limited to text, graphics, logos, images, and software, are the property of Neo Saturn or its affiliates, licensors, or service providers. You may not copy, distribute, modify, or create derivative works of any content or materials on our app without our prior written consent.</string>
    <string name="limitation_of_liability">Limitation of Liability</string>
    <string name="limitation_of_liability_desc">In no event shall Neo Saturn, its affiliates, or its service providers be liable for any damages, including but not limited to direct, indirect, incidental, special, or consequential damages, arising out of or in connection with the use or inability to use our app.</string>
    <string name="indemnification">Indemnification</string>
    <string name="indemnification_desc">You agree to indemnify and hold harmless Neo Saturn, its affiliates, and its service providers from any claim or demand, including reasonable attorneys\' fees, made by any third party due to or arising out of your use of our app, your violation of these Terms and Conditions, or your violation of any rights of another.</string>
    <string name="governing_law">Governing Law</string>
    <string name="governing_law_desc">These Terms and Conditions shall be governed by and construed in accordance with the laws of the jurisdiction in which Neo Saturn is located, without giving effect to any principles of conflicts of law.</string>
    <string name="changes_to_terms_and_conditions">Changes to Terms and Conditions</string>
    <string name="changes_to_terms_and_conditions_desc">We may update these Terms and Conditions from time to time. We will provide notice of any material changes to these Terms and Conditions by posting the updated Terms and Conditions on our app.</string>
    <string name="reg_or_app_tour_heading">Take an app tour to <font color="#7165E3">EXPLORE</font>  neosaturn, or <font color="#7165E3">REGISTER</font> to get a loan</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="app_tour">Take an app tour</string>
    <string name="login">Login</string>
    <string name="account_exists">Already have an account?  </string>
    <string name="app_tour_heading">Watch this video to get an <font color="#7165E3">OVERALL</font> app overview</string>
    <string name="next">Next</string>
    <string name="want_to_register">Do you want to <font color="#7165E3">REGISTER</font>?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="want_to_exit">Do you want to <font color="#7165E3">EXIT</font>?</string>
    <string name="congratulation_text"><font color="#7165E3">CONGRATULATIONS!</font> You have been registered successfully!</string>
    <string name="registration_details_sent">Your registration details have been sent to your email address, and phone number</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_desc">Please provide following details for your new account</string>
    <string name="already_have_an_account_login">Already have an account? - </string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="middlename">Middle name</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_desc">Please enter your valid phone number. We will send you 6-digit code to verify account.</string>
    <string name="phone_number_otp_desc">An OTP will be sent to your phone number</string>
</resources>