<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".intro.SecurityActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:scrollbarSize="5dp"
        android:scrollbarThumbVertical="@color/violet"
        android:scrollbarTrackVertical="@color/gray_d9D9D9"
        tools:ignore="RtlSymmetry">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/dmsans_bold_26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_fingerprint_icon"
                android:layout_marginTop="37dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/your_data_is_secure_with_us"
                android:textColor="@color/blue" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_pin_icon"
                android:layout_width="242dp"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/data_security" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/checked_image"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="38dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/dmsans_medium_18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bank_grade_security" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/dmsans_regular_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bank_grade_security_des"
                            android:textColor="@color/gray_text"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/data_privacy"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="38dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/dmsans_medium_18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_privacy" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/dmsans_regular_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_privacy_des"
                            android:textColor="@color/gray_text"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/data_storage"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="38dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/dmsans_medium_18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_storage" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/dmsans_regular_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_storage_des"
                            android:textColor="@color/gray_text"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="29dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/lending_policy"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="38dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/dmsans_medium_18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lending_policy" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/dmsans_regular_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lending_policy_des"
                            android:textColor="@color/gray_text"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/processFurther"
                style="@style/ButtonBigVioletTheme"
                android:text="@string/proceed_further"
                android:layout_marginTop="67dp"
                android:layout_marginHorizontal="37dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>